--- a/less/app.less
+++ b/less/app.less
@@ -792,9 +792,12 @@ footer.footer {
 							label {
 								display: block;
 							}
-							input,
-							select {
+							input {
 								width: 185px;
+							}
+							select {
+								width: auto;
+								min-width: 185px;
 							}
 							&.hmd {
 								padding-top: 30px;
@@ -1383,6 +1386,9 @@ footer.footer {
 							max-height: 100px;
 						}
 					}
+				}
+				.table-content .table.no-pagination {
+					height: 79vh;
 				}
 				.table-content .table.normal {
 					height: auto;
