Add conditional checkings for Config Inventory page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -466,9 +466,12 @@
 					font-weight: bold;
 					padding: 5px 10px;
 				}
+				.empty-rule {
+					margin: 5px 0 5px 10px;
+				}
 				.list {
 					max-height: 400px;
-					overflow-y: scroll;
+					overflow-y: auto;
 					.group {
 						border-top: 1px solid #ccc;
 						.path {
