Style updates for Inventory Rule content.

--- a/less/modal.less
+++ b/less/modal.less
@@ -529,7 +529,8 @@
 										display: none;
 									}
 									ul {
-										padding: 10px 15px;
+										padding: 10px;
+										width: 20%;
 										li span {
 											color: #185e9e;
 										}
