--- a/less/modal.less
+++ b/less/modal.less
@@ -617,13 +617,20 @@
 		}
 	}
 	.chart-section {
-		clear: both;
-		margin-top: 10px;
+		float: left;
+		width: 75%;
+		margin-top: 30px;
 		.msg {
 			text-align: center;
 			margin-top: 20px;
 			margin-bottom: 10px;
 		}
+	}
+	.table-section {
+		float: right;
+		width: 20%;
+		height: 430px;
+		overflow-y: auto;
 	}
 }
 /* configuration/syslog/syslog */
