--- a/less/app.less
+++ b/less/app.less
@@ -44,6 +44,16 @@ footer.footer {
 	left: auto !important;
 	top: 40px !important;
 	right: 10px;
+	li {
+		&:first-child {
+			border-top-left-radius: 8px;
+			border-top-right-radius: 8px;
+		}
+		&:last-child {
+			border-bottom-left-radius: 8px;
+			border-bottom-right-radius: 8px;
+		}
+	}
 }
 #g-header { //Top nav menu
 	color: #ffffff;
@@ -76,6 +86,7 @@ footer.footer {
 		font-size: 1.8em;
 		top: 0;
 		right: 15px;
+		cursor: pointer;
 	}
 }
 .c-button-group {
