Fix bugs and styles for PCAP dialog in Alert and Events.

--- a/less/modal.less
+++ b/less/modal.less
@@ -254,7 +254,6 @@
     }
   }
   .pcap-content {
-    position: relative;
     .filter-empty {
       width: 200px;
       margin-bottom: 10px;
@@ -328,7 +327,7 @@
     min-height: 270px;
     textarea {
       width: 550px;
-      height: 250px;
+      height: 260px;
     }
   }
 }
@@ -1058,7 +1057,7 @@
         min-height: 300px;
         textarea {
           width: 550px;
-          height: 335px;
+          height: 300px;
         }
       }
       .payload {
@@ -1085,6 +1084,11 @@
               display: block;
             }
           }
+        }
+      }
+      .pcap-content {
+        footer {
+          margin-top: 15px;
         }
       }
     }
