Add IR selection functionality for HMD IR tab. Minor code refactor.

--- a/less/modal.less
+++ b/less/modal.less
@@ -459,6 +459,9 @@
           top: 20px;
           right: 0;
           padding: .3em .5em;
+          &.temp {
+            right: 80px;
+          }
         }
       }
       .scan-content {
@@ -1054,7 +1057,7 @@
         }
       }
       .pcap {
-        min-height: 300px;
+        min-height: 285px;
         textarea {
           width: 550px;
           height: 280px;
