Update HMD IR item selection. Fix/update various items based on feedback.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1125,3 +1125,12 @@
     margin-top: 10px;
   }
 }
+#irSelectionDialog-content {
+  width: 450px;
+  #irComboList {
+    margin: 10px 0 20px 0;
+  }
+  .c-checkbox-group {
+    height: 270px;
+  }
+}
