--- a/less/modal.less
+++ b/less/modal.less
@@ -68,16 +68,6 @@
     }
   }
 }
-#g-user-privileges-edit {
-  footer {
-    text-align: center;
-  }
-}
-#g-user-accounts-edit-dialog {
-  .c-form {
-    flex-basis: auto;
-  }
-}
 #areaMapUpload {
   input {
     margin-bottom: 1px !important;
@@ -192,12 +182,12 @@
     select,
     textarea {
       width: 100%;
+      &.add {
+        margin-bottom: 15px;
+      }
     }
     textarea {
       border: 1px solid #d9d9d9;
-    }
-    .add {
-      margin-bottom: 15px;
     }
     .c-combobox {
       width: 100%;
@@ -374,7 +364,7 @@
   }
 }
 /* events/endpoint/index */
-#addTask-content {
+#addTaskDialog-content {
   max-height: 550px;
   min-width: 400px;
 }
@@ -459,9 +449,6 @@
           top: 20px;
           right: 0;
           padding: .3em .5em;
-          &.temp {
-            right: 80px;
-          }
         }
       }
       .scan-content {
@@ -576,7 +563,7 @@
   }
 }
 /* configuration/topology/owner-mixname */
-#departmentTitleManage-content {
+#departmentTitleDialog-content {
   width: 350px;
   height: 400px;
   overflow-y: auto;
@@ -745,7 +732,7 @@
   }
 }
 /* configuration/user/accounts/account-edit */
-#g-user-accounts-edit {
+#accountEditDialog {
   .c-box.dialog.react-draggable {
     max-width: 600px;
     > .content {
@@ -758,6 +745,11 @@
         margin-right: 6px;
       }
     }
+  }
+}
+#privilegeEditDialog {
+  footer {
+    text-align: center;
   }
 }
 /* common/floor-map */
@@ -1132,5 +1124,10 @@
   }
   .c-checkbox-group {
     height: 270px;
+  }
+}
+#editHostDialog-content {
+  .group {
+    margin-bottom: 5px;
   }
 }
