Update styles for the group config table columns.

--- a/less/app.less
+++ b/less/app.less
@@ -1368,12 +1368,12 @@ footer.footer {
                 //   font-weight: bold;
                 // }
                 &.permit {
-                  margin: 5px;
-                  border: 1px solid #ccc;
-                  border-radius: 90px;
-                  background-color: #004d93;
-                  color: white;
+                  color: #fff;
+                  font-size: 15px;
+                  margin: 0px 2px;
                   padding: 5px 10px;
+                  border-radius: 5px;
+                  background-color: #004d93;
                 }
               }
               &.align-center {
