--- a/less/modal.less
+++ b/less/modal.less
@@ -370,15 +370,18 @@
 }
 /* configuration/notifications/index */
 #testEmailDialog-content {
-  width: 500px;
+  width: 700px;
   padding: 20px 20px 25px 20px;
   .react-multi-email {
-    height: 42px;
+    display: flex;
+    flex-wrap: wrap;
     [data-tag] {
-      padding-top: 10px;
+      font-size: 14px;
+      font-weight: normal;
       color: #fff;
+      padding: 8px 10px;
+      margin: 0 2px;
       background-color: #004d99;
-      margin-bottom: 5px;
     }
   }
 }
