Add the GCB tab for HMD dialog box. Code refactor for Tables.

--- a/less/modal.less
+++ b/less/modal.less
@@ -380,7 +380,7 @@
       font-weight: normal;
       color: #fff;
       padding: 8px 10px;
-      margin: 0 2px;
+      margin: 2px;
       background-color: #004d99;
     }
   }
@@ -441,6 +441,11 @@
             margin-right: 30px;
           }
         }
+        .pass-total {
+          float: right;
+          color: #22ac38;
+          margin-right: 90px;
+        }
         .count {
           position: absolute;
           top: 25px;
@@ -453,6 +458,9 @@
           right: 0;
           padding: .3em .5em;
         }
+      }
+      .main-table {
+        margin-top: 15px;
       }
       .scan-content {
         margin-top: 15px;
