Add Malware Detection tab for the HMD dialog. Implement the IR item selection API.

--- a/less/modal.less
+++ b/less/modal.less
@@ -461,6 +461,9 @@
       }
       .main-table {
         margin-top: 15px;
+        span[title] {
+          cursor: default;
+        }
       }
       .scan-content {
         margin-top: 15px;
