--- a/less/modal.less
+++ b/less/modal.less
@@ -82,6 +82,11 @@
   }
 }
 #modalWindowSmall {
+  #modalWindowSmall-dialog {
+    footer button {
+      margin: 0 5px;
+    }
+  }
   #modalWindowSmall-content {
     min-width: 300px;
     text-align: center;
@@ -598,6 +603,7 @@
     position: absolute;
     top: 15px;
     right: 15px;
+    font-size: 24px;
   }
   table {
     width: 100%;
@@ -606,7 +612,14 @@
       text-align: left;
     }
     tbody td.name {
-      width: 80%;
+      width: 79%;
+      font-size: 15px;
+    }
+    tbody td.option {
+      i {
+        font-size: 26px;
+        margin: 0 1px;
+      }
     }
   }
 }
@@ -1151,5 +1164,14 @@
 #editHostDialog-content {
   .group {
     margin-bottom: 5px;
+  }
+}
+#editHostDialog-dialog,
+#renderNameDialog-dialog {
+  footer {
+    text-align: center;
+    button {
+      margin: 0 5px;
+    }
   }
 }
