Update Alert levels and alert search API. Complete HMD scan info for Alert dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -568,7 +568,7 @@
       }
       .severity {
         display: block;
-        width: 70px;
+        width: 90px;
         padding: 2px;
         color: #fff;
         border-radius: 10px;
@@ -704,14 +704,17 @@
 #dashboardModalDialog-content {
   .scan-info {
     min-height: 365px;
+    padding: 0;
+    border: none;
     .info-content {
       .table {
-        height: 255px;
+        height: 270px;
+        width: 705px;
       }
       .scan-content {
         .list {
-          max-height: 210px;
-          width: 685px;
+          max-height: 235px;
+          width: 705px;
         }
       }
     }
