--- a/less/app.less
+++ b/less/app.less
@@ -1407,11 +1407,11 @@ footer.footer {
               &._tableMenu_ {
                 width: 1px;
               }
-              &.Severity {
+              &._severity_ {
                 span.severity {
                   display: block;
                   color: #fff;
-                  width: 70px;
+                  width: 90px;
                   margin-left: 20px;
                   padding: 2px;
                   text-align: center;
@@ -1566,57 +1566,6 @@ footer.footer {
       border-radius: 100%;
       font-size: 5px;
       padding: 2px;
-    }
-  }
-  .safety-scan-content { //TODO!
-    overflow: hidden;
-    max-height: 362px;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-    .nav {
-      float: left;
-      width: 180px;
-      min-height: 360px;
-      background-color: #fff;
-      border-right: 1px solid #ccc;
-      li {
-        font-size: 12px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        overflow: hidden;
-        border-bottom: 1px solid #ccc;
-        span {
-          padding: 10px;
-          display: block;
-          cursor: pointer;
-          &.name {
-            float: left;
-            color: #000;
-          }
-          &.count {
-            float: right;
-            font-size: 10px;
-          }
-        }
-      }
-    }
-    .content {
-      position: relative;
-      float: left;
-      width: 500px;
-      .time {
-        margin-top: 6px;
-        margin-bottom: 20px;
-        span {
-          display: block;
-          margin-bottom: 10px;
-        }
-      }
-      button {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-      }
     }
   }
   .privateIp-info { //For Config Topology Network Inventory
