Update GCB table content and styles.

--- a/less/modal.less
+++ b/less/modal.less
@@ -441,6 +441,19 @@
       .table {
         overflow-y: auto;
         margin-top: 15px;
+        #cceId,
+        #compareResult {
+          min-width: 90px;
+        }
+        #_FileInfo._Filesize,
+        #_IsPE,
+        #_IsPEextension,
+        #_IsVerifyTrust {
+          min-width: 100px;
+        }
+        .compareResult {
+          text-align: center;
+        }
       }
       .scan-content {
         margin-top: 15px;
