--- a/less/modal.less
+++ b/less/modal.less
@@ -441,17 +441,18 @@
       .table {
         overflow-y: auto;
         margin-top: 15px;
-        #cceId,
-        #compareResult {
+        .cceId,
+        .compareResult {
           min-width: 90px;
         }
-        #_FileInfo._Filesize,
-        #_IsPE,
-        #_IsPEextension,
-        #_IsVerifyTrust {
-          min-width: 100px;
-        }
         .compareResult {
+          text-align: center;
+        }
+        .field_Filesize,
+        .field_IsPE,
+        .field_IsPEextension,
+        .field_IsVerifyTrust {
+          min-width: 120px;
           text-align: center;
         }
       }
