Add threat upload in Threat Intelligent page. Add more service type in Edge. Add app.config back to track.

--- a/less/modal.less
+++ b/less/modal.less
@@ -778,7 +778,7 @@
       }
       .scan-content {
         .list {
-          max-height: 400px;
+          max-height: 395px;
         }
       }
     }
@@ -1225,4 +1225,7 @@
 }
 #fileModal-content {
   text-align: center;
+}
+#uploadThreatDialog-content {
+  width: 350px;
 }
