Add sync and import buttons for GCB. Refator Edge service type desc.

--- a/less/modal.less
+++ b/less/modal.less
@@ -423,7 +423,7 @@
         .pass-total {
           float: right;
           color: #22ac38;
-          margin-right: 90px;
+          margin-right: 265px;
         }
         .count {
           position: absolute;
@@ -436,6 +436,12 @@
           top: 20px;
           right: 0;
           padding: .3em .5em;
+          &.sync {
+            right: 175px;
+          }
+          &.import {
+            right: 80px;
+          }
         }
       }
       .table {
@@ -443,7 +449,7 @@
         margin-top: 15px;
         .cceId,
         .compareResult {
-          min-width: 90px;
+          min-width: 95px;
         }
         .compareResult {
           text-align: center;
