Add severity indicators for Alert Tree. Use the Top10InternalMaskedIp for the Dashboard internal maps.

--- a/less/modal.less
+++ b/less/modal.less
@@ -443,6 +443,7 @@
         overflow-y: auto;
         margin-top: 15px;
         .cceId,
+        .type,
         .compareResult {
           min-width: 120px;
           text-align: center;
