--- a/less/app.less
+++ b/less/app.less
@@ -512,7 +512,7 @@ footer.footer {
                 position: absolute;
                 top: 10px;
                 right: 10px;
-                width: 50px;
+                width: 70px;
                 padding: 2px;
                 color: #fff;
                 text-align: center;
@@ -607,6 +607,30 @@ footer.footer {
           display: none;
         }
       }
+      .alert-tree,
+      .private-tree {
+        .fg-recode {
+          float: left;
+          font-size: 1em;
+          margin-top: 3px;
+          margin-right: 3px;
+          &.Emergency {
+            color: #CC2943;
+          }
+          &.Alert {
+            color: #CC7B29;
+          }
+          &.Critical {
+            color: #29B0CC;
+          }
+          &.Warning {
+            color: #29CC7A;
+          }
+          &.Notice {
+            color: #7ACC29;
+          }
+        }
+      }
       input,
       select,
       .c-combobox {
@@ -615,8 +639,11 @@ footer.footer {
       .c-hierarchy {
         .button {
           display: none;
-          padding: .1em .5em;
           font-size: .5em;
+          color: #4a4a4a;
+          padding: .1em .8em;
+          border-radius: 5px;
+          background-color: #fff;
           &.active {
             display: inline-block;
           }
