Add table sorting for HMD dialog. Minor bugs fix.

--- a/less/modal.less
+++ b/less/modal.less
@@ -442,16 +442,16 @@
       .table {
         overflow-y: auto;
         margin-top: 15px;
-        .cceId,
-        .type,
-        .compareResult {
+        .gcb_CceId,
+        .gcb_Type,
+        .gcb_CompareResult {
           min-width: 120px;
           text-align: center;
         }
-        .field_Filesize,
-        .field_IsPE,
-        .field_IsPEextension,
-        .field_IsVerifyTrust {
+        .scan-file_Filesize,
+        .scan-file_IsPE,
+        .scan-file_IsPEextension,
+        .scan-file_IsVerifyTrust {
           min-width: 120px;
           text-align: center;
         }
