--- a/less/app.less
+++ b/less/app.less
@@ -418,7 +418,7 @@ footer.footer {
         border-radius: 5px;
         overflow: hidden;
         &.bar {
-          width: 74.25%;
+          width: 49.32%;
           height: 460px;
         }
         header {
@@ -841,9 +841,8 @@ footer.footer {
           color: #004d93;
         }
         .button-group.open-query {
-          position: absolute;
-          top: 5px;
-          left: 47px;
+          position: relative;
+          float: left;
         }
         .filter-section {
           display: flex;
