--- a/less/modal.less
+++ b/less/modal.less
@@ -754,16 +754,9 @@
         background-color: #f7f7f7;
       }
     }
-    tbody td:hover {
-      cursor: text;
-    }
-    .align-center {
-      text-align: center;
-      &.ip,
-      &.mac,
-      &.hostName,
-      &.ownerName {
-        width: 25%;
+    tbody {
+      tr.align-center td {
+        text-align: center;
       }
     }
     span[title] {
