Update styles for Alert Details box left nav. Update HMD scan type msg.

--- a/less/app.less
+++ b/less/app.less
@@ -1448,6 +1448,11 @@ footer.footer {
                   margin: 5px 0;
                 }
               }
+              &.scanInfo {
+                li {
+                  color: #d10d25;
+                }
+              }
               &.ipPort {
                 img {
                   float: left;
