Add srcIP and destIP redirect for Alert Info box. Fix Dashboard Statistics when data is unavailable.

--- a/less/app.less
+++ b/less/app.less
@@ -443,10 +443,8 @@ footer.footer {
             padding-top: 25px;
           }
         }
-        .disk-usage {
-          header {
-            border-top: 1px solid #ccc;
-          }
+        .dns-histogram {
+          border-bottom: 1px solid #ccc;
         }
       }
     }
