--- a/less/modal.less
+++ b/less/modal.less
@@ -654,9 +654,17 @@
         top: 10px;
         right: 10px;
         text-align: right;
+        min-width: 100px;
         cursor: pointer;
         div {
           cursor: pointer;
+          &.redirect-ip {
+            float: left;
+            margin-right: 10px;
+          }
+          &.query-more {
+            float: left;
+          }
         }
       }
       ul {
