Fix the behavior of floor map dialog. Fix bugs based on QA's feedback.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1001,7 +1001,7 @@
     > .content {
       display: flex;
       .c-form > div input, 
-      .c-form > div div, {
+      .c-form > div div {
          width: 250px;
       }
       .c-form > div.selected {
