--- a/less/modal.less
+++ b/less/modal.less
@@ -811,9 +811,9 @@
     margin: 15px 0;
     i {
       padding: 2px;
+      margin: 0 2px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      cursor: pointer;
     }
   }
 }
