Add refs JSON data for alert system pattern. Fix various bugs from QA's feedback.

--- a/less/modal.less
+++ b/less/modal.less
@@ -667,6 +667,13 @@
           }
         }
       }
+      section.alert-rule {
+        height: 375px;
+        overflow-y: auto;
+        ul {
+          background: none !important;
+        }
+      }
       ul {
         &.redirect-menu {
           position: absolute;
@@ -811,9 +818,9 @@
     margin: 15px 0;
     i {
       padding: 2px;
+      margin: 0 2px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      cursor: pointer;
     }
   }
 }
