Change search bar interval options to dropdown list. Add value check for table field value.

--- a/less/app.less
+++ b/less/app.less
@@ -250,6 +250,9 @@ footer.footer {
         float: left;
         margin-right: 10px;
       }
+      #updateInterval {
+        margin-right: 10px;
+      }
       .search-interval {
         float: left;
         margin-right: 10px;
