Fix srcIP and destIp not display properly for Alert details. Fix IP not display for Network sessions.

--- a/less/modal.less
+++ b/less/modal.less
@@ -933,6 +933,7 @@
         margin-top: 10px;
         margin-bottom: 10px;
         margin-left: 50%;
+        visibility: hidden;
       }
       button {
         position: absolute;
