--- a/less/app.less
+++ b/less/app.less
@@ -1552,6 +1552,38 @@ footer.footer {
             min-height: 80vh;
           }
         }
+        .csv-section {
+          .csv-table {
+            float: left;
+            height: 78vh;
+            width: 85%;
+            overflow-y: auto;
+          }
+          .csv-dropdown {
+            float: left;
+            width: 15%;
+            .group {
+              padding: 10px 30px;
+              label {
+                display: block;
+                color: #004d93;
+                margin-bottom: 5px;
+              }
+              select {
+                width: 100%;
+              }
+            }
+          }
+          footer {
+            position: absolute;
+            right: 5px;
+            bottom: 15px;
+            padding: 0;
+            button {
+              margin: 0 5px;
+            }
+          }
+        }
       }
     }
     .map-container { //For Config Topology Map page
