Complete excel upload to support both CSV and XLSX format. Fix csv upload header support and fix Chinese language support.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1225,3 +1225,15 @@
 #uploadThreatDialog-content {
   width: 350px;
 }
+#batchUploadDialog-content {
+  #csvFileInput {
+    margin-bottom: 10px;
+  }
+  .csv-options {
+    float: right;
+    label {
+      float: left;
+      margin-right: 5px;
+    }
+  }
+}
