Continue Implementing the infinite scroll for HMD.

--- a/less/modal.less
+++ b/less/modal.less
@@ -795,9 +795,19 @@
       .table {
         height: 425px;
       }
-      .scan-content {
-        .list {
-          max-height: 395px;
+      .scan-wrapper {
+        margin-top: 10px;
+        .scan-section {
+          margin-bottom: 25px;
+          .scan-header {
+            display: block;
+            margin-bottom: -10px;
+          }
+          .scan-content {
+            .list {
+              //max-height: 395px;
+            }
+          }
         }
       }
     }
