Complete Network Behavior section for Dashboard Maps and Threats page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -754,6 +754,14 @@
       .table-data {
         max-height: 345px;
         overflow-y: auto;
+        .severity-level {
+          display: block;
+          width: 90px;
+          padding: 2px;
+          color: #fff;
+          border-radius: 10px;
+          text-align: center;
+        }
       }
     }
   }
