Complete implementing the CSV batch upload for Inventory.

--- a/less/app.less
+++ b/less/app.less
@@ -1560,6 +1560,7 @@ footer.footer {
             height: 78vh;
             width: 85%;
             overflow-y: auto;
+            border-right: 1px solid #d9d9d9;
           }
           .csv-dropdown {
             float: left;
