--- a/less/modal.less
+++ b/less/modal.less
@@ -1262,3 +1262,17 @@
     }
   }
 }
+#batchUploadFailureModal-content {
+  min-width: 500px;
+  .error-msg {
+    color: #da364a;
+    margin-bottom: 10px;
+  }
+  .table-data {
+    max-height: 400px;
+    overflow-y: auto;
+    .main-table {
+      width: 100%;
+    }
+  }
+}
