Add and implement the new arrow tree component.

--- a/less/modal.less
+++ b/less/modal.less
@@ -527,6 +527,7 @@
                 }
               }
               &.hide,
+              span.hide,
               code.hide,
               .sub-content.hide {
                 display: none;
