Complete the new Arrow tree component.

--- a/less/modal.less
+++ b/less/modal.less
@@ -483,12 +483,15 @@
               padding: 5px 45px;
               border-top: 1px solid #ccc;
               .rule-content {
-                margin-bottom: 5px;
-                .header {
+                margin-bottom: 2px;
+                .header,
+                .tree-content {
                   position: relative;
                   width: 100%;
-                  color: #185e9e;
                   cursor: default;
+                }
+                .header {
+                  color: #185e9e;
                   span {
                     padding-left: 18px;
                     display: inline-block;
