Add host count for HMD malware result. Fix CSV Chinese encoding issue.

--- a/less/modal.less
+++ b/less/modal.less
@@ -798,6 +798,9 @@
         border: 1px solid #ccc !important;
       }
     }
+    &.maleware {
+      width: 1070px;
+    }
     thead {
       border-top: 1px solid #d9d9d9;
       tr {
