Add more detail upload info for CSV batch import.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1265,11 +1265,11 @@
     }
   }
 }
-#batchUploadFailureModal-content {
+#batchUploadStatusModal-content {
   min-width: 500px;
   .error-msg {
     color: #da364a;
-    margin-bottom: 10px;
+    margin-top: 10px;
   }
   .table-data {
     max-height: 400px;
