--- a/less/app.less
+++ b/less/app.less
@@ -888,25 +888,30 @@ footer.footer {
                 min-width: 185px;
               }
               &.hmd {
+                position: relative;
                 display: flex;
                 width: 100%;
-                .option {
+                margin: 30px 5px 5px 5px;
+                padding: 10px;
+                border: 1px solid #d9d9d9;
+                border-radius: 5px;
+                background-color: #fff;
+                header {
+                  position: absolute;
+                  top: -25px;
+                  left: 0;
+                }
+                .hmd-options {
                   display: flex;
-                  margin-right: 15px;
-                  label {
-                    margin-right: 2px;
+                  .option {
+                    display: flex;
+                    margin-right: 15px;
+                    label {
+                      margin-right: 2px;
+                    }
                   }
                 }
               }
-              .hmd-options {
-                display: flex;
-                .option {
-                  margin-right: 15px;
-                }
-                label {
-                  margin-right: 2px;
-                }
-              }              
             }
           }
         }
