--- a/less/app.less
+++ b/less/app.less
@@ -757,11 +757,9 @@ footer.footer {
         overflow: hidden;
         .filter-section,
         .mark-section {
-          background-color: #ededed;
           .filter-warp,
           .mark-wrap {
             padding: 5px 7px;
-            background-color: #ededed;
             & > span {
               margin: 3px 0;
             }
@@ -770,15 +768,22 @@ footer.footer {
                 background-color: #fff;
               }
             }
+            .group {
+              .fg-add {
+                background-color: #001b34;
+                color: #fff;
+              }
+            }
             .filter-select {
               width: 215px;
             }
             .condition-select {
               width: 100px;
               height: 35px;
+              margin-right: 3px;
             }
             .filter-inputbox {
-              width: 233px;
+              width: 230px;
               height: 35px;
             }
             .mark-inputbox {
@@ -861,8 +866,7 @@ footer.footer {
       .main-filter {
         .header-text {
           float: left;
-          margin-top: 5px;
-          margin-right: 5px;
+          margin: 5px;
           color: #004d93;
         }
         .button-group.open-query {
@@ -872,13 +876,15 @@ footer.footer {
         .filter-section {
           display: flex;
           flex-wrap: wrap;
-          margin-top: 37px;
+          margin-top: 40px;
           &.config {
-            padding: 5px;
             .group {
               padding: 5px;
               label {
                 display: block;
+                font-size: 15px;
+                color: #004d93;
+                margin-bottom: 3px;
               }
               input {
                 width: 185px;
@@ -900,14 +906,20 @@ footer.footer {
                   position: absolute;
                   top: -25px;
                   left: 0;
+                  color: #004d93;
                 }
                 .hmd-options {
                   display: flex;
                   .option {
-                    display: flex;
                     margin-right: 15px;
                     label {
+                      float: right;
                       margin-right: 2px;
+                      color: #333;
+                    }
+                    i {
+                      float: left;
+                      margin-right: 3px;
                     }
                   }
                 }
